cmake_minimum_required(VERSION 3.22.0)

project(hierarchy)
add_executable(print equilateral_triangle.cpp figure.cpp isosceles_triangle.cpp main.cpp parallelogram.cpp quadrangle.cpp rectangle.cpp rhombus.cpp right_triangle.cpp square.cpp triangle.cpp equilateral_triangle.h figure.h isosceles_triangle.h parallelogram.h quadrangle.h rectangle.h rhombus.h right_triangle.h square.h triangle.h)